# crispy-waffle

./: .gitignore  Cargo.toml
assets/: Cargo.toml
assets/src/: asset.rs  lib.rs  material.rs  repository.rs  serialization.rs
drawer2d/: Cargo.toml
drawer2d/src/: drawer.rs  font.rs  glyph_cache.rs  lib.rs  rect.rs
editor/: Cargo.toml  build.rs
editor/shaders/: demo.comp.glsl  ui.frag.glsl  ui.vert.glsl
editor/shaders/include/editor/: sdf.h
editor/src/: custom_render.rs  custom_ui.rs  main.rs  simple_renderer.rs
editor/src/custom_render/: demo_node.rs  ui_pass.rs
exo/src/: dynamic_array.rs  lib.rs  pool.rs
profile/: Cargo.toml
profile/src/: lib.rs
render/: Cargo.toml
render/shaders/include/render/: bindless.h  hash.h  maths.h  pbr.h  types.h
render/src/: bindings.rs  lib.rs  render_graph.rs  ring_buffer.rs  shader.rs  vulkan.rs
render/src/render_graph/: builtins.rs  graph.rs  resource_registry.rs
render/src/vulkan/: buffer.rs  compute_pipeline.rs  context_pool.rs  contexts.rs  descriptor_set.rs  device.rs  error.rs  fence.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  instance.rs  memory.rs  physical_device.rs  shader.rs  surface.rs
render_sample/: Cargo.toml  build.rs
render_sample/shaders/: base.frag.glsl  base.vert.glsl  demo.comp.glsl  ui.frag.glsl  ui.vert.glsl
render_sample/shaders/include/render_sample/: rect.h  sdf.h
render_sample/src/: main.rs  vulkan.rs
render_sample/src/vulkan/: context_pool.rs  contexts.rs  device.rs  error.rs  fence.rs  framebuffer.rs  image.rs  instance.rs  physical_device.rs  queues.rs  surface.rs
ui/: Cargo.toml
ui/src/: lib.rs  widgets.rs
ui_docking/: Cargo.toml
ui_docking/src/: lib.rs
