[package]
name = "profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optick = { version = "1.3.4", optional = true }
tracy-client = { version = "0.13.1", optional = true }


[features]
default = []
optick = ["dep:optick"]
tracy = ["dep:tracy-client"]