[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exo = {path= "../exo"}
gpu-alloc = "0.5.3"
gpu-alloc-erupt = "0.7.0"
erupt = "0.22.0"
raw-window-handle = "0.4.2"
thiserror = "1.0"