[package]
name = "render_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exo = {path= "../exo"}
render = {path= "../render"}
drawer2d = {path= "../drawer2d"}
ui = {path= "../ui"}
ui_docking = {path= "../ui_docking"}
profile = {path= "../profile"}
winit = "0.26.1"
anyhow = "1.0"
raw-window-handle = "0.4.2"